tests/pass/LTPass.java
package pass;

public class LTPass {
    public boolean lessthan(int x, int y){
        return x < y;
    }
    
}
