tests/fail/LT.java
package fail;

public class LT {
    public boolean lessthan(int x, int y){
        return x < "a";
}
}